kubernetes/infrastructure/controllers/toolhive/toolhive-mcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: agent-tools
  namespace: toolhive-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`toolhive.home.mcnees.me`)
      kind: Rule
      services:
        - name: vmcp-agent-tools
          port: 4483
  tls:
    secretName: agent-tools-tls
